--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
  <h2>Drag and Drop</h2>
  <p>Drag the image back and forth between frames.</p>
 <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
-  <img src="images/PorkyMeme.gif" draggable="true" ondragstart="drag(event)" id="drag1" width="88" height="31">
+  <img src="PorkyMeme.gif" draggable="true" ondragstart="drag(event)" id="drag1" width="88" height="31">
 </div>
 
 <div id="div2" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
